# mybili

./: CMakeLists.txt  FindPage.qml  HeadToolBar.qml  LeftSideBar.qml  Main.qml  PlayVideoWindow.qml  PopularPage.qml  README.md  RecommendPage.qml  VideoDelegate.qml  VideoProcessSlider.qml  main.cpp  networkhttp.cpp  networkhttp.h  res.qrc  videodata.cpp  videodata.h  videomodel.cpp  videomodel.h
